// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileForm> with default values render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="profile-form"
      >
        <div
          class="avatar-field mb-xl pb-xl"
        >
          <label
            class="avatar-field__content"
          >
            <input
              accept="image/*"
              class="file-input avatar-field__input"
              data-testid="file-input"
              name="file"
              title="Foto de perfil"
              type="file"
            />
            <img
              alt="Foto de perfil"
              class="avatar-field__preview"
              src="https://cdn.mesalva.com/any_image.jpeg"
            />
            <div
              class="avatar-field__overlay avatar-field__overlay--has-image"
            >
              <span
                class="icon"
                data-name="camera"
                data-testid="camera"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 8C3 8.55 3.45 9 4 9C4.55 9 5 8.55 5 8V6H7C7.55 6 8 5.55 8 5C8 4.45 7.55 4 7 4H5V2C5 1.45 4.55 1 4 1C3.45 1 3 1.45 3 2V4H1C0.45 4 0 4.45 0 5C0 5.55 0.45 6 1 6H3V8Z"
                    fill="currentColor"
                  />
                  <circle
                    cx="13"
                    cy="14"
                    fill="currentColor"
                    r="3"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17.83 6H21C22.1 6 23 6.9 23 8V20C23 21.1 22.1 22 21 22H5C3.9 22 3 21.1 3 20V9.72C3.3 9.89 3.63 10 4 10C5.1 10 6 9.1 6 8V7H7C8.1 7 9 6.1 9 5C9 4.63 8.89 4.3 8.72 4H15.12C15.68 4 16.22 4.24 16.59 4.65L17.83 6ZM8 14C8 16.76 10.24 19 13 19C15.76 19 18 16.76 18 14C18 11.24 15.76 9 13 9C10.24 9 8 11.24 8 14Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="text text--size-sm"
              >
                Adicionar foto
              </p>
            </div>
          </label>
          <span
            class="caption avatar-field__caption"
            data-testid="avatar-field-caption"
          >
            Arquivos *.png, *.jpg, *.jpeg
            <br />
            Tamanho máximo 10 MB
          </span>
        </div>
        <p
          class="text text--size-sm"
        >
          <a
            class="link mr-xl link--secondary"
          >
            <span
              class="icon mr-md"
              data-name="key"
              data-testid="key"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7 6C9.61 6 11.83 7.67 12.65 10H23V14H21V18H17V14H12.65C11.83 16.33 9.61 18 7 18C3.69 18 1 15.31 1 12C1 8.69 3.69 6 7 6ZM5 12C5 13.1 5.9 14 7 14C8.1 14 9 13.1 9 12C9 10.9 8.1 10 7 10C5.9 10 5 10.9 5 12Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Trocar Senha
          </a>
          <a
            class="link link--secondary"
            href="https://www.mesalva.com/user/trocar-email"
          >
            <span
              class="icon mr-md"
              data-name="mail"
              data-testid="mail"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 4H19C20.6569 4 22 5.34315 22 7V17C22 18.6569 20.6569 20 19 20H5C3.34315 20 2 18.6569 2 17V7C2 5.34315 3.34315 4 5 4ZM12.5 10.47L19 6H5L11.5 10.47C11.8094 10.6486 12.1906 10.6486 12.5 10.47Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Trocar E-mail
          </a>
        </p>
        <hr
          class="divider mb-xl mt-sm"
        />
        <form
          class="form-with-submit-button"
          id="profile-form"
        >
          <div
            class="form-with-submit-button__container"
          >
            <div
              class="profile-form__group grid grid--growing"
              style="--columns-xs: 1fr; --columns-sm: 1fr; --columns-md: repeat(2, 1fr); --columns-lg: repeat(2, 1fr);"
            >
              <h3
                class="subtitle subtitle--size-md profile-form__title"
              >
                Informações Pessoais
              </h3>
              <div
                class="field field--is-filled"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      id="name"
                      name="name"
                      required=""
                      type="text"
                      value="Any Name"
                    />
                  </div>
                  <label
                    class="field__label"
                    for="name"
                  >
                    Nome Completo
                  </label>
                  <legend
                    class="field__legend"
                  >
                    Nome Completo
                  </legend>
                </fieldset>
              </div>
              <div
                class="field field--is-filled field--is-disabled"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      disabled=""
                      id="email"
                      value="any_name@mesalva.com"
                    />
                  </div>
                  <label
                    class="field__label"
                    for="email"
                  >
                    E-mail
                  </label>
                  <legend
                    class="field__legend"
                  >
                    E-mail
                  </legend>
                </fieldset>
              </div>
              <div
                class="field field--is-filled"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      id="phone"
                      name="phone"
                      type="tel"
                      value="(51) 99999-9999"
                    />
                  </div>
                  <label
                    class="field__label"
                    for="phone"
                  >
                    WhatsApp
                  </label>
                  <legend
                    class="field__legend"
                  >
                    WhatsApp
                  </legend>
                </fieldset>
              </div>
              <div
                class="field field--is-filled"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      id="birthDate"
                      name="birthDate"
                      required=""
                      type="tel"
                      value="18/03/1995"
                    />
                  </div>
                  <label
                    class="field__label"
                    for="birthDate"
                  >
                    Nascimento
                  </label>
                  <legend
                    class="field__legend"
                  >
                    Nascimento
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="profile-form__group grid grid--growing"
              style="--columns-xs: 1fr; --columns-sm: 1fr; --columns-md: repeat(2, 1fr); --columns-lg: repeat(2, 1fr);"
            >
              <h3
                class="subtitle subtitle--size-md profile-form__title"
              >
                Informações de Estudo
              </h3>
              <div
                class="skeleton skeleton--is-default"
                data-testid="skeleton"
              >
                <div
                  class="skeleton-container"
                >
                  <div
                    class="select-field select-field--has-filter"
                  >
                    <div>
                      <div
                        class="field field--has-right-icon"
                      >
                        <fieldset
                          class="field__fieldset"
                        >
                          <div
                            class="field__content"
                          >
                            <input
                              class="field__input"
                              id="educationLevel"
                              name="educationLevel"
                              value=""
                            />
                            <span
                              class="icon select-field__toggle-icon field__icon--has-action"
                              data-name="chevron-down"
                              data-testid="chevron-down"
                              tabindex="0"
                            >
                              <svg
                                fill="none"
                                height="24"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M15.4676 9.76651L11.9955 13.3018L8.52349 9.76651C8.1745 9.41116 7.61074 9.41116 7.26174 9.76651C6.91275 10.1219 6.91275 10.6959 7.26174 11.0513L11.3691 15.2335C11.7181 15.5888 12.2819 15.5888 12.6309 15.2335L16.7383 11.0513C17.0872 10.6959 17.0872 10.1219 16.7383 9.76651C16.3893 9.42027 15.8166 9.41116 15.4676 9.76651Z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </div>
                          <label
                            class="field__label"
                            for="educationLevel"
                          >
                            Nível de Ensino
                          </label>
                          <legend
                            class="field__legend"
                          >
                            Nível de Ensino
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="skeleton skeleton--is-default"
                data-testid="skeleton"
              >
                <div
                  class="skeleton-container"
                >
                  <div
                    class="select-field select-field--has-filter"
                  >
                    <div>
                      <div
                        class="field field--has-right-icon"
                      >
                        <fieldset
                          class="field__fieldset"
                        >
                          <div
                            class="field__content"
                          >
                            <input
                              class="field__input"
                              id="objective"
                              name="objective"
                              value=""
                            />
                            <span
                              class="icon select-field__toggle-icon field__icon--has-action"
                              data-name="chevron-down"
                              data-testid="chevron-down"
                              tabindex="0"
                            >
                              <svg
                                fill="none"
                                height="24"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M15.4676 9.76651L11.9955 13.3018L8.52349 9.76651C8.1745 9.41116 7.61074 9.41116 7.26174 9.76651C6.91275 10.1219 6.91275 10.6959 7.26174 11.0513L11.3691 15.2335C11.7181 15.5888 12.2819 15.5888 12.6309 15.2335L16.7383 11.0513C17.0872 10.6959 17.0872 10.1219 16.7383 9.76651C16.3893 9.42027 15.8166 9.41116 15.4676 9.76651Z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </div>
                          <label
                            class="field__label"
                            for="objective"
                          >
                            Objetivo
                          </label>
                          <legend
                            class="field__legend"
                          >
                            Objetivo
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="field"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      id="enemSubscriptionId"
                      name="enemSubscriptionId"
                      value=""
                    />
                  </div>
                  <label
                    class="field__label"
                    for="enemSubscriptionId"
                  >
                    Número de Inscrição do ENEM
                  </label>
                  <legend
                    class="field__legend"
                  >
                    Número de Inscrição do ENEM
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <button
            class="btn btn--primary btn--size-md submit-button form-with-submit-button__submit-button"
            id="profile-submit-button"
            type="submit"
          >
            <span
              class="btn__content"
            >
              Salvar
            </span>
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="profile-form"
    >
      <div
        class="avatar-field mb-xl pb-xl"
      >
        <label
          class="avatar-field__content"
        >
          <input
            accept="image/*"
            class="file-input avatar-field__input"
            data-testid="file-input"
            name="file"
            title="Foto de perfil"
            type="file"
          />
          <img
            alt="Foto de perfil"
            class="avatar-field__preview"
            src="https://cdn.mesalva.com/any_image.jpeg"
          />
          <div
            class="avatar-field__overlay avatar-field__overlay--has-image"
          >
            <span
              class="icon"
              data-name="camera"
              data-testid="camera"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 8C3 8.55 3.45 9 4 9C4.55 9 5 8.55 5 8V6H7C7.55 6 8 5.55 8 5C8 4.45 7.55 4 7 4H5V2C5 1.45 4.55 1 4 1C3.45 1 3 1.45 3 2V4H1C0.45 4 0 4.45 0 5C0 5.55 0.45 6 1 6H3V8Z"
                  fill="currentColor"
                />
                <circle
                  cx="13"
                  cy="14"
                  fill="currentColor"
                  r="3"
                />
                <path
                  clip-rule="evenodd"
                  d="M17.83 6H21C22.1 6 23 6.9 23 8V20C23 21.1 22.1 22 21 22H5C3.9 22 3 21.1 3 20V9.72C3.3 9.89 3.63 10 4 10C5.1 10 6 9.1 6 8V7H7C8.1 7 9 6.1 9 5C9 4.63 8.89 4.3 8.72 4H15.12C15.68 4 16.22 4.24 16.59 4.65L17.83 6ZM8 14C8 16.76 10.24 19 13 19C15.76 19 18 16.76 18 14C18 11.24 15.76 9 13 9C10.24 9 8 11.24 8 14Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="text text--size-sm"
            >
              Adicionar foto
            </p>
          </div>
        </label>
        <span
          class="caption avatar-field__caption"
          data-testid="avatar-field-caption"
        >
          Arquivos *.png, *.jpg, *.jpeg
          <br />
          Tamanho máximo 10 MB
        </span>
      </div>
      <p
        class="text text--size-sm"
      >
        <a
          class="link mr-xl link--secondary"
        >
          <span
            class="icon mr-md"
            data-name="key"
            data-testid="key"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M7 6C9.61 6 11.83 7.67 12.65 10H23V14H21V18H17V14H12.65C11.83 16.33 9.61 18 7 18C3.69 18 1 15.31 1 12C1 8.69 3.69 6 7 6ZM5 12C5 13.1 5.9 14 7 14C8.1 14 9 13.1 9 12C9 10.9 8.1 10 7 10C5.9 10 5 10.9 5 12Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Trocar Senha
        </a>
        <a
          class="link link--secondary"
          href="https://www.mesalva.com/user/trocar-email"
        >
          <span
            class="icon mr-md"
            data-name="mail"
            data-testid="mail"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5 4H19C20.6569 4 22 5.34315 22 7V17C22 18.6569 20.6569 20 19 20H5C3.34315 20 2 18.6569 2 17V7C2 5.34315 3.34315 4 5 4ZM12.5 10.47L19 6H5L11.5 10.47C11.8094 10.6486 12.1906 10.6486 12.5 10.47Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Trocar E-mail
        </a>
      </p>
      <hr
        class="divider mb-xl mt-sm"
      />
      <form
        class="form-with-submit-button"
        id="profile-form"
      >
        <div
          class="form-with-submit-button__container"
        >
          <div
            class="profile-form__group grid grid--growing"
            style="--columns-xs: 1fr; --columns-sm: 1fr; --columns-md: repeat(2, 1fr); --columns-lg: repeat(2, 1fr);"
          >
            <h3
              class="subtitle subtitle--size-md profile-form__title"
            >
              Informações Pessoais
            </h3>
            <div
              class="field field--is-filled"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    id="name"
                    name="name"
                    required=""
                    type="text"
                    value="Any Name"
                  />
                </div>
                <label
                  class="field__label"
                  for="name"
                >
                  Nome Completo
                </label>
                <legend
                  class="field__legend"
                >
                  Nome Completo
                </legend>
              </fieldset>
            </div>
            <div
              class="field field--is-filled field--is-disabled"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    disabled=""
                    id="email"
                    value="any_name@mesalva.com"
                  />
                </div>
                <label
                  class="field__label"
                  for="email"
                >
                  E-mail
                </label>
                <legend
                  class="field__legend"
                >
                  E-mail
                </legend>
              </fieldset>
            </div>
            <div
              class="field field--is-filled"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    id="phone"
                    name="phone"
                    type="tel"
                    value="(51) 99999-9999"
                  />
                </div>
                <label
                  class="field__label"
                  for="phone"
                >
                  WhatsApp
                </label>
                <legend
                  class="field__legend"
                >
                  WhatsApp
                </legend>
              </fieldset>
            </div>
            <div
              class="field field--is-filled"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    id="birthDate"
                    name="birthDate"
                    required=""
                    type="tel"
                    value="18/03/1995"
                  />
                </div>
                <label
                  class="field__label"
                  for="birthDate"
                >
                  Nascimento
                </label>
                <legend
                  class="field__legend"
                >
                  Nascimento
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="profile-form__group grid grid--growing"
            style="--columns-xs: 1fr; --columns-sm: 1fr; --columns-md: repeat(2, 1fr); --columns-lg: repeat(2, 1fr);"
          >
            <h3
              class="subtitle subtitle--size-md profile-form__title"
            >
              Informações de Estudo
            </h3>
            <div
              class="skeleton skeleton--is-default"
              data-testid="skeleton"
            >
              <div
                class="skeleton-container"
              >
                <div
                  class="select-field select-field--has-filter"
                >
                  <div>
                    <div
                      class="field field--has-right-icon"
                    >
                      <fieldset
                        class="field__fieldset"
                      >
                        <div
                          class="field__content"
                        >
                          <input
                            class="field__input"
                            id="educationLevel"
                            name="educationLevel"
                            value=""
                          />
                          <span
                            class="icon select-field__toggle-icon field__icon--has-action"
                            data-name="chevron-down"
                            data-testid="chevron-down"
                            tabindex="0"
                          >
                            <svg
                              fill="none"
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.4676 9.76651L11.9955 13.3018L8.52349 9.76651C8.1745 9.41116 7.61074 9.41116 7.26174 9.76651C6.91275 10.1219 6.91275 10.6959 7.26174 11.0513L11.3691 15.2335C11.7181 15.5888 12.2819 15.5888 12.6309 15.2335L16.7383 11.0513C17.0872 10.6959 17.0872 10.1219 16.7383 9.76651C16.3893 9.42027 15.8166 9.41116 15.4676 9.76651Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="field__label"
                          for="educationLevel"
                        >
                          Nível de Ensino
                        </label>
                        <legend
                          class="field__legend"
                        >
                          Nível de Ensino
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="skeleton skeleton--is-default"
              data-testid="skeleton"
            >
              <div
                class="skeleton-container"
              >
                <div
                  class="select-field select-field--has-filter"
                >
                  <div>
                    <div
                      class="field field--has-right-icon"
                    >
                      <fieldset
                        class="field__fieldset"
                      >
                        <div
                          class="field__content"
                        >
                          <input
                            class="field__input"
                            id="objective"
                            name="objective"
                            value=""
                          />
                          <span
                            class="icon select-field__toggle-icon field__icon--has-action"
                            data-name="chevron-down"
                            data-testid="chevron-down"
                            tabindex="0"
                          >
                            <svg
                              fill="none"
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.4676 9.76651L11.9955 13.3018L8.52349 9.76651C8.1745 9.41116 7.61074 9.41116 7.26174 9.76651C6.91275 10.1219 6.91275 10.6959 7.26174 11.0513L11.3691 15.2335C11.7181 15.5888 12.2819 15.5888 12.6309 15.2335L16.7383 11.0513C17.0872 10.6959 17.0872 10.1219 16.7383 9.76651C16.3893 9.42027 15.8166 9.41116 15.4676 9.76651Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="field__label"
                          for="objective"
                        >
                          Objetivo
                        </label>
                        <legend
                          class="field__legend"
                        >
                          Objetivo
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    id="enemSubscriptionId"
                    name="enemSubscriptionId"
                    value=""
                  />
                </div>
                <label
                  class="field__label"
                  for="enemSubscriptionId"
                >
                  Número de Inscrição do ENEM
                </label>
                <legend
                  class="field__legend"
                >
                  Número de Inscrição do ENEM
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <button
          class="btn btn--primary btn--size-md submit-button form-with-submit-button__submit-button"
          id="profile-submit-button"
          type="submit"
        >
          <span
            class="btn__content"
          >
            Salvar
          </span>
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ProfileForm> without default values render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="profile-form"
      >
        <div
          class="avatar-field mb-xl pb-xl"
        >
          <label
            class="avatar-field__content"
          >
            <input
              accept="image/*"
              class="file-input avatar-field__input"
              data-testid="file-input"
              name="file"
              title="Foto de perfil"
              type="file"
            />
            <div
              class="avatar-field__overlay"
            >
              <span
                class="icon"
                data-name="camera"
                data-testid="camera"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 8C3 8.55 3.45 9 4 9C4.55 9 5 8.55 5 8V6H7C7.55 6 8 5.55 8 5C8 4.45 7.55 4 7 4H5V2C5 1.45 4.55 1 4 1C3.45 1 3 1.45 3 2V4H1C0.45 4 0 4.45 0 5C0 5.55 0.45 6 1 6H3V8Z"
                    fill="currentColor"
                  />
                  <circle
                    cx="13"
                    cy="14"
                    fill="currentColor"
                    r="3"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17.83 6H21C22.1 6 23 6.9 23 8V20C23 21.1 22.1 22 21 22H5C3.9 22 3 21.1 3 20V9.72C3.3 9.89 3.63 10 4 10C5.1 10 6 9.1 6 8V7H7C8.1 7 9 6.1 9 5C9 4.63 8.89 4.3 8.72 4H15.12C15.68 4 16.22 4.24 16.59 4.65L17.83 6ZM8 14C8 16.76 10.24 19 13 19C15.76 19 18 16.76 18 14C18 11.24 15.76 9 13 9C10.24 9 8 11.24 8 14Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="text text--size-sm"
              >
                Adicionar foto
              </p>
            </div>
          </label>
          <span
            class="caption avatar-field__caption"
            data-testid="avatar-field-caption"
          >
            Arquivos *.png, *.jpg, *.jpeg
            <br />
            Tamanho máximo 10 MB
          </span>
        </div>
        <p
          class="text text--size-sm"
        >
          <a
            class="link mr-xl link--secondary"
          >
            <span
              class="icon mr-md"
              data-name="key"
              data-testid="key"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7 6C9.61 6 11.83 7.67 12.65 10H23V14H21V18H17V14H12.65C11.83 16.33 9.61 18 7 18C3.69 18 1 15.31 1 12C1 8.69 3.69 6 7 6ZM5 12C5 13.1 5.9 14 7 14C8.1 14 9 13.1 9 12C9 10.9 8.1 10 7 10C5.9 10 5 10.9 5 12Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Trocar Senha
          </a>
          <a
            class="link link--secondary"
            href="https://www.mesalva.com/user/trocar-email"
          >
            <span
              class="icon mr-md"
              data-name="mail"
              data-testid="mail"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 4H19C20.6569 4 22 5.34315 22 7V17C22 18.6569 20.6569 20 19 20H5C3.34315 20 2 18.6569 2 17V7C2 5.34315 3.34315 4 5 4ZM12.5 10.47L19 6H5L11.5 10.47C11.8094 10.6486 12.1906 10.6486 12.5 10.47Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Trocar E-mail
          </a>
        </p>
        <hr
          class="divider mb-xl mt-sm"
        />
        <form
          class="form-with-submit-button"
          id="profile-form"
        >
          <div
            class="form-with-submit-button__container"
          >
            <div
              class="profile-form__group grid grid--growing"
              style="--columns-xs: 1fr; --columns-sm: 1fr; --columns-md: repeat(2, 1fr); --columns-lg: repeat(2, 1fr);"
            >
              <h3
                class="subtitle subtitle--size-md profile-form__title"
              >
                Informações Pessoais
              </h3>
              <div
                class="field"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      id="name"
                      name="name"
                      required=""
                      type="text"
                      value=""
                    />
                  </div>
                  <label
                    class="field__label"
                    for="name"
                  >
                    Nome Completo
                  </label>
                  <legend
                    class="field__legend"
                  >
                    Nome Completo
                  </legend>
                </fieldset>
              </div>
              <div
                class="field field--is-disabled"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      disabled=""
                      id="email"
                      value=""
                    />
                  </div>
                  <label
                    class="field__label"
                    for="email"
                  >
                    E-mail
                  </label>
                  <legend
                    class="field__legend"
                  >
                    E-mail
                  </legend>
                </fieldset>
              </div>
              <div
                class="field"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      id="phone"
                      name="phone"
                      type="tel"
                      value=""
                    />
                  </div>
                  <label
                    class="field__label"
                    for="phone"
                  >
                    WhatsApp
                  </label>
                  <legend
                    class="field__legend"
                  >
                    WhatsApp
                  </legend>
                </fieldset>
              </div>
              <div
                class="field"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      id="birthDate"
                      name="birthDate"
                      required=""
                      type="tel"
                      value=""
                    />
                  </div>
                  <label
                    class="field__label"
                    for="birthDate"
                  >
                    Nascimento
                  </label>
                  <legend
                    class="field__legend"
                  >
                    Nascimento
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="profile-form__group grid grid--growing"
              style="--columns-xs: 1fr; --columns-sm: 1fr; --columns-md: repeat(2, 1fr); --columns-lg: repeat(2, 1fr);"
            >
              <h3
                class="subtitle subtitle--size-md profile-form__title"
              >
                Informações de Estudo
              </h3>
              <div
                class="skeleton skeleton--is-default"
                data-testid="skeleton"
              >
                <div
                  class="skeleton-container"
                >
                  <div
                    class="select-field select-field--has-filter"
                  >
                    <div>
                      <div
                        class="field field--has-right-icon"
                      >
                        <fieldset
                          class="field__fieldset"
                        >
                          <div
                            class="field__content"
                          >
                            <input
                              class="field__input"
                              id="educationLevel"
                              name="educationLevel"
                              value=""
                            />
                            <span
                              class="icon select-field__toggle-icon field__icon--has-action"
                              data-name="chevron-down"
                              data-testid="chevron-down"
                              tabindex="0"
                            >
                              <svg
                                fill="none"
                                height="24"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M15.4676 9.76651L11.9955 13.3018L8.52349 9.76651C8.1745 9.41116 7.61074 9.41116 7.26174 9.76651C6.91275 10.1219 6.91275 10.6959 7.26174 11.0513L11.3691 15.2335C11.7181 15.5888 12.2819 15.5888 12.6309 15.2335L16.7383 11.0513C17.0872 10.6959 17.0872 10.1219 16.7383 9.76651C16.3893 9.42027 15.8166 9.41116 15.4676 9.76651Z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </div>
                          <label
                            class="field__label"
                            for="educationLevel"
                          >
                            Nível de Ensino
                          </label>
                          <legend
                            class="field__legend"
                          >
                            Nível de Ensino
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="skeleton skeleton--is-default"
                data-testid="skeleton"
              >
                <div
                  class="skeleton-container"
                >
                  <div
                    class="select-field select-field--has-filter"
                  >
                    <div>
                      <div
                        class="field field--has-right-icon"
                      >
                        <fieldset
                          class="field__fieldset"
                        >
                          <div
                            class="field__content"
                          >
                            <input
                              class="field__input"
                              id="objective"
                              name="objective"
                              value=""
                            />
                            <span
                              class="icon select-field__toggle-icon field__icon--has-action"
                              data-name="chevron-down"
                              data-testid="chevron-down"
                              tabindex="0"
                            >
                              <svg
                                fill="none"
                                height="24"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M15.4676 9.76651L11.9955 13.3018L8.52349 9.76651C8.1745 9.41116 7.61074 9.41116 7.26174 9.76651C6.91275 10.1219 6.91275 10.6959 7.26174 11.0513L11.3691 15.2335C11.7181 15.5888 12.2819 15.5888 12.6309 15.2335L16.7383 11.0513C17.0872 10.6959 17.0872 10.1219 16.7383 9.76651C16.3893 9.42027 15.8166 9.41116 15.4676 9.76651Z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </div>
                          <label
                            class="field__label"
                            for="objective"
                          >
                            Objetivo
                          </label>
                          <legend
                            class="field__legend"
                          >
                            Objetivo
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="field"
              >
                <fieldset
                  class="field__fieldset"
                >
                  <div
                    class="field__content"
                  >
                    <input
                      class="field__input"
                      id="enemSubscriptionId"
                      name="enemSubscriptionId"
                      value=""
                    />
                  </div>
                  <label
                    class="field__label"
                    for="enemSubscriptionId"
                  >
                    Número de Inscrição do ENEM
                  </label>
                  <legend
                    class="field__legend"
                  >
                    Número de Inscrição do ENEM
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <button
            class="btn btn--primary btn--size-md submit-button form-with-submit-button__submit-button"
            id="profile-submit-button"
            type="submit"
          >
            <span
              class="btn__content"
            >
              Salvar
            </span>
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="profile-form"
    >
      <div
        class="avatar-field mb-xl pb-xl"
      >
        <label
          class="avatar-field__content"
        >
          <input
            accept="image/*"
            class="file-input avatar-field__input"
            data-testid="file-input"
            name="file"
            title="Foto de perfil"
            type="file"
          />
          <div
            class="avatar-field__overlay"
          >
            <span
              class="icon"
              data-name="camera"
              data-testid="camera"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 8C3 8.55 3.45 9 4 9C4.55 9 5 8.55 5 8V6H7C7.55 6 8 5.55 8 5C8 4.45 7.55 4 7 4H5V2C5 1.45 4.55 1 4 1C3.45 1 3 1.45 3 2V4H1C0.45 4 0 4.45 0 5C0 5.55 0.45 6 1 6H3V8Z"
                  fill="currentColor"
                />
                <circle
                  cx="13"
                  cy="14"
                  fill="currentColor"
                  r="3"
                />
                <path
                  clip-rule="evenodd"
                  d="M17.83 6H21C22.1 6 23 6.9 23 8V20C23 21.1 22.1 22 21 22H5C3.9 22 3 21.1 3 20V9.72C3.3 9.89 3.63 10 4 10C5.1 10 6 9.1 6 8V7H7C8.1 7 9 6.1 9 5C9 4.63 8.89 4.3 8.72 4H15.12C15.68 4 16.22 4.24 16.59 4.65L17.83 6ZM8 14C8 16.76 10.24 19 13 19C15.76 19 18 16.76 18 14C18 11.24 15.76 9 13 9C10.24 9 8 11.24 8 14Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="text text--size-sm"
            >
              Adicionar foto
            </p>
          </div>
        </label>
        <span
          class="caption avatar-field__caption"
          data-testid="avatar-field-caption"
        >
          Arquivos *.png, *.jpg, *.jpeg
          <br />
          Tamanho máximo 10 MB
        </span>
      </div>
      <p
        class="text text--size-sm"
      >
        <a
          class="link mr-xl link--secondary"
        >
          <span
            class="icon mr-md"
            data-name="key"
            data-testid="key"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M7 6C9.61 6 11.83 7.67 12.65 10H23V14H21V18H17V14H12.65C11.83 16.33 9.61 18 7 18C3.69 18 1 15.31 1 12C1 8.69 3.69 6 7 6ZM5 12C5 13.1 5.9 14 7 14C8.1 14 9 13.1 9 12C9 10.9 8.1 10 7 10C5.9 10 5 10.9 5 12Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Trocar Senha
        </a>
        <a
          class="link link--secondary"
          href="https://www.mesalva.com/user/trocar-email"
        >
          <span
            class="icon mr-md"
            data-name="mail"
            data-testid="mail"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5 4H19C20.6569 4 22 5.34315 22 7V17C22 18.6569 20.6569 20 19 20H5C3.34315 20 2 18.6569 2 17V7C2 5.34315 3.34315 4 5 4ZM12.5 10.47L19 6H5L11.5 10.47C11.8094 10.6486 12.1906 10.6486 12.5 10.47Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Trocar E-mail
        </a>
      </p>
      <hr
        class="divider mb-xl mt-sm"
      />
      <form
        class="form-with-submit-button"
        id="profile-form"
      >
        <div
          class="form-with-submit-button__container"
        >
          <div
            class="profile-form__group grid grid--growing"
            style="--columns-xs: 1fr; --columns-sm: 1fr; --columns-md: repeat(2, 1fr); --columns-lg: repeat(2, 1fr);"
          >
            <h3
              class="subtitle subtitle--size-md profile-form__title"
            >
              Informações Pessoais
            </h3>
            <div
              class="field"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    id="name"
                    name="name"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <label
                  class="field__label"
                  for="name"
                >
                  Nome Completo
                </label>
                <legend
                  class="field__legend"
                >
                  Nome Completo
                </legend>
              </fieldset>
            </div>
            <div
              class="field field--is-disabled"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    disabled=""
                    id="email"
                    value=""
                  />
                </div>
                <label
                  class="field__label"
                  for="email"
                >
                  E-mail
                </label>
                <legend
                  class="field__legend"
                >
                  E-mail
                </legend>
              </fieldset>
            </div>
            <div
              class="field"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    id="phone"
                    name="phone"
                    type="tel"
                    value=""
                  />
                </div>
                <label
                  class="field__label"
                  for="phone"
                >
                  WhatsApp
                </label>
                <legend
                  class="field__legend"
                >
                  WhatsApp
                </legend>
              </fieldset>
            </div>
            <div
              class="field"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    id="birthDate"
                    name="birthDate"
                    required=""
                    type="tel"
                    value=""
                  />
                </div>
                <label
                  class="field__label"
                  for="birthDate"
                >
                  Nascimento
                </label>
                <legend
                  class="field__legend"
                >
                  Nascimento
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="profile-form__group grid grid--growing"
            style="--columns-xs: 1fr; --columns-sm: 1fr; --columns-md: repeat(2, 1fr); --columns-lg: repeat(2, 1fr);"
          >
            <h3
              class="subtitle subtitle--size-md profile-form__title"
            >
              Informações de Estudo
            </h3>
            <div
              class="skeleton skeleton--is-default"
              data-testid="skeleton"
            >
              <div
                class="skeleton-container"
              >
                <div
                  class="select-field select-field--has-filter"
                >
                  <div>
                    <div
                      class="field field--has-right-icon"
                    >
                      <fieldset
                        class="field__fieldset"
                      >
                        <div
                          class="field__content"
                        >
                          <input
                            class="field__input"
                            id="educationLevel"
                            name="educationLevel"
                            value=""
                          />
                          <span
                            class="icon select-field__toggle-icon field__icon--has-action"
                            data-name="chevron-down"
                            data-testid="chevron-down"
                            tabindex="0"
                          >
                            <svg
                              fill="none"
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.4676 9.76651L11.9955 13.3018L8.52349 9.76651C8.1745 9.41116 7.61074 9.41116 7.26174 9.76651C6.91275 10.1219 6.91275 10.6959 7.26174 11.0513L11.3691 15.2335C11.7181 15.5888 12.2819 15.5888 12.6309 15.2335L16.7383 11.0513C17.0872 10.6959 17.0872 10.1219 16.7383 9.76651C16.3893 9.42027 15.8166 9.41116 15.4676 9.76651Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="field__label"
                          for="educationLevel"
                        >
                          Nível de Ensino
                        </label>
                        <legend
                          class="field__legend"
                        >
                          Nível de Ensino
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="skeleton skeleton--is-default"
              data-testid="skeleton"
            >
              <div
                class="skeleton-container"
              >
                <div
                  class="select-field select-field--has-filter"
                >
                  <div>
                    <div
                      class="field field--has-right-icon"
                    >
                      <fieldset
                        class="field__fieldset"
                      >
                        <div
                          class="field__content"
                        >
                          <input
                            class="field__input"
                            id="objective"
                            name="objective"
                            value=""
                          />
                          <span
                            class="icon select-field__toggle-icon field__icon--has-action"
                            data-name="chevron-down"
                            data-testid="chevron-down"
                            tabindex="0"
                          >
                            <svg
                              fill="none"
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.4676 9.76651L11.9955 13.3018L8.52349 9.76651C8.1745 9.41116 7.61074 9.41116 7.26174 9.76651C6.91275 10.1219 6.91275 10.6959 7.26174 11.0513L11.3691 15.2335C11.7181 15.5888 12.2819 15.5888 12.6309 15.2335L16.7383 11.0513C17.0872 10.6959 17.0872 10.1219 16.7383 9.76651C16.3893 9.42027 15.8166 9.41116 15.4676 9.76651Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="field__label"
                          for="objective"
                        >
                          Objetivo
                        </label>
                        <legend
                          class="field__legend"
                        >
                          Objetivo
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <fieldset
                class="field__fieldset"
              >
                <div
                  class="field__content"
                >
                  <input
                    class="field__input"
                    id="enemSubscriptionId"
                    name="enemSubscriptionId"
                    value=""
                  />
                </div>
                <label
                  class="field__label"
                  for="enemSubscriptionId"
                >
                  Número de Inscrição do ENEM
                </label>
                <legend
                  class="field__legend"
                >
                  Número de Inscrição do ENEM
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <button
          class="btn btn--primary btn--size-md submit-button form-with-submit-button__submit-button"
          id="profile-submit-button"
          type="submit"
        >
          <span
            class="btn__content"
          >
            Salvar
          </span>
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
